@@ -6,8 +6,8 @@ Stubdir = @STUBSPATH@/mail
 nobase_Stub_DATA = main.cf.mas master.cf.mas pop3d.mas imapd.mas \
 						 authldaprc.mas authdaemonrc.mas pop3d-ssl.mas \
 						 imapd-ssl.mas smtpd.conf.mas saslauthd.conf.mas\
-						 saslauthd.mas \
-                 ebox.postgrey.mas whitelist_clients.mas 
+						 ebox.postgrey.mas whitelist_clients.mas \
+						 saslauthd.mas sasl_passwd.mas
 
 EXTRA_DIST = $(nobase_Stub_DATA)
 
